Icons for remaining things. Search thing retains its icon and name in the palette. Script can have a custom icon and title.

--- a/src/chrome/locale/en-US/script.dtd
+++ b/src/chrome/locale/en-US/script.dtd
@@ -1,3 +1,5 @@
-<!ENTITY thinger.script.options.title        "Script Options">
+<!ENTITY thinger.script.options.title          "Script Options">
 
-<!ENTITY thinger.script.options.title.label  "Title:">
+<!ENTITY thinger.script.options.title.label    "Title:">
+<!ENTITY thinger.script.options.browse.label   "Browse...">
+<!ENTITY thinger.script.options.icon.label     "Icon:">
